tests/toy/neg/000733_mutation.toylang
program a = { a = if a == a; } .
